# cast-value.rs

./: .gitignore  Cargo.toml
.github/workflows/: CI.yml  ci.yml  zizmor.yml
core/: Cargo.toml
core/benches/: conversions.rs
core/examples/: check_simd.rs
core/src/: lib.rs
core/src/simd/: avx.rs  mod.rs
docs/: design.md
js/: Cargo.toml
js/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/cast_value_rs/: __init__.py  __init__.pyi  _cast_value_rs.pyi
python/examples/: float_to_int.py
python/src/: lib.rs
python/tests/: test_cast_array.py  test_cast_array_into.py  test_errors.py  test_scalar_map.py
