[package]
name = "cast-value-wasm"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for the Zarr cast_value codec"
repository = "https://github.com/zarr-developers/cast-value.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zarr-cast-value = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
